# BioMC_PostProcess

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  crates.js  help.html  pyproject.toml  search-index.js  settings.html  src-files.js
.github/workflows/: CI.yml  examples.yml  pages.yml  rust_test.yml
bcore/: all.html  enum.Weight.html  index.html  sidebar-items.js  struct.ConcatPostPrcess.html  struct.PostProcess.html
bcore/api/: enum.Estimator.html  enum.Phase.html  index.html  sidebar-items.js  trait.ModelEstimator.html  trait.PostProcessReader.html
bcore/datamodel/: enum.Weight.html  fn.f_get_probes.html  fn.vec_to_array_view2.html  fn.vec_to_array_view3.html  index.html  sidebar-items.js  struct.Dim.html  struct.Results.html  trait.ResultGroup.html
bcore/datamodel/_impl/: fn.get_n_export_real.html  fn.get_probe_size.html  fn.make_histogram.html  fn.read_avg_model_properties.html  fn.read_model_mass.html  fn.read_model_properties.html  fn.read_number_particle.html  fn.read_spatial_model_properties.html  index.html  macro.read_scalar!.html  macro.read_scalar.html  macro.read_vec!.html  macro.read_vec.html  sidebar-items.js
bcore/datamodel/main_file/: index.html  sidebar-items.js  struct.MainFInal.html  struct.MainInitial.html  struct.MainRecords.html  struct.MainResult.html  struct.Misc.html
bcore/datamodel/tallies/: index.html  sidebar-items.js  struct.Tallies.html
bcore/error/: enum.ApiError.html  index.html
bcore/impl_concat/: index.html  sidebar-items.js  struct.ConcatPostPrcess.html
bcore/impl_unique/: index.html  sidebar-items.js  struct.PostProcess.html
bcore/process/: fn.estimate.html  fn.normalize_concentration.html  fn.spatial_average_concentration.html  fn.variance_concentration.html  fn.variance_concentration_from_mean.html  index.html  sidebar-items.js  struct.Histogram.html
biomc_pp/: __init__.py  all.html  enum.Estimator.html  enum.Phase.html  figures.py  index.html  main.py  rtd.py  sidebar-items.js  struct.PythonPostProcess.html
biomc_pp/biomc_pp/: fn.__pyo3_pymodule.html  index.html  sidebar-items.js  struct.MakeDef.html
core/: Cargo.toml
core/src/: api.rs  error.rs  impl_concat.rs  impl_unique.rs  lib.rs
core/src/datamodel/: _impl.rs  main_file.rs  mod.rs  tallies.rs
core/src/process/: mod.rs
examples/: Cargo.toml  example_concat.rs  example_histogram.rs  example_python.py  example_rust.rs  out.html  out_concat.html  out_hist.html  out_rust.html
examples/example0d/: example0d.h5  example0d_partial_0.h5
examples/python/: example_concat.py  example_python.py  example_vtk.py
python_wrap/: Cargo.toml
python_wrap/src/: lib.rs
search.desc/bcore/: bcore-desc-0-.js
search.desc/biomc_pp/: biomc_pp-desc-0-.js
src/bcore/: api.rs.html  error.rs.html  impl_concat.rs.html  impl_unique.rs.html  lib.rs.html
src/bcore/datamodel/: _impl.rs.html  main_file.rs.html  mod.rs.html  tallies.rs.html
src/bcore/process/: mod.rs.html
src/biomc_pp/: lib.rs.html
trait.impl/bcore/datamodel/: trait.ResultGroup.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/pyo3/conversion/: trait.IntoPy.js  trait.IntoPyObject.js
trait.impl/pyo3/impl_/extract_argument/: trait.PyFunctionArgument.js
trait.impl/pyo3/impl_/pyclass/: trait.PyClassImpl.js  trait.PyClassNewTextSignature.js  trait.PyMethods.js
trait.impl/pyo3/pyclass/: trait.PyClass.js
trait.impl/pyo3/type_object/: trait.PyTypeInfo.js
trait.impl/pyo3/types/: trait.DerefToPyAny.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
