[workspace]
members = [
    "core",
    "python_wrap",
    "examples"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Benncs/BioMC_PostProcess/"
readme = "README.md"
version = "0.3.3"
edition = "2021"
authors = ["Benjamin Casale"]
description = "Post-Processing for Monte-Carlo simulation"
categories = ["science"]
keywords = ["MonteCarlo", "plot"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
