[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "biomc_pp"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.2.0",
    "matplotlib"
]



[project.scripts]
main = "biomc_pp:main"

[tool.maturin]
profile = "release"
bindings = "pyo3"
features = ["pyo3/extension-module"]
all-features = false
no-default-features = false
manifest-path = "python_wrap/Cargo.toml"
frozen = false
locked = false
# Override a configuration value (unstable)
config = []
# Unstable (nightly-only) flags to Cargo, see 'cargo -Z help' for details
unstable-flags = []
# Extra arguments that will be passed to rustc as `cargo rustc [...] -- [...] [arg1] [arg2]`
rustc-args = []
