[package]
name = "bcore"
description = "Core"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
publish = true

[dependencies]
hdf5 = "0.8.1"
ndarray = "0.16.1"
#hdf5-sys = { version = "0.8.1", features = ["static"] }

[lib]
name = "bcore"
path = "src/lib.rs"