[package]
name = "bcore"
description = "Core"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
publish = true

[dependencies]
csv = "1.3.1"
hdf5 = "0.8.1"
ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
#hdf5-sys = { version = "0.8.1", features = ["static"] }

[lib]
name = "bcore"
path = "src/lib.rs"
