[package]
name = "examples"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
bcore = { path = "../core" }
plotly = { version = "0.12", features = ["kaleido", "kaleido_download","plotly_ndarray"] }
ndarray = "0.16.1"

[[example]]
name = "rust"
path = "example_rust.rs"

[[example]]
name = "concat"
path = "example_concat.rs"


[[example]]
name = "rust_hist"
path = "example_histogram.rs"
