[package]
name = "python_wrap"
description = "Python bindings"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
publish = true

[package.metadata.maturin]
bindings = "pyo3"

[dependencies]
bcore = { path = "../core" }
numpy = "0.23.0"
pyo3 = { version = "0.23.1", features = ["extension-module"] }


[lib]
name = "biomc_pp"
path = "src/lib.rs"
crate-type = ["cdylib"]